--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Enhanced Budget Tracker (€)</h1>
+        <h1>Budget Tracker (€)</h1>
         <div id="budget-section">
             <label for="monthly-budget">Set Monthly Budget: €</label>
             <input type="number" id="monthly-budget" placeholder="Enter budget">
